<?xml version="1.0" encoding="utf-8"?>
<resources>

    <color name="blue">#888888</color>

    <string name="app_name">QuraanMindMapping</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_surah">SurahActivity</string>
    <string name="title_activity_about_app">AboutAppActivity</string>
    <string name="about">عن التطبيق</string>
    <string name="aim">يهدف هذا التطبيق لايجاد طرق ابتكارية لتسهيل الحفظ وسيتم قريبا اضافة المزيد من الخصائص المساعدة على الحفظ  وبقية السور</string>
    <string name="vote">التصويت للتطبيق حتى يمكننا الاستمرار</string>
    <string name="useapp">أحسن طريقة للاستفادة من التطبيق</string>
    <string name="share">شارك التطبيق مع اصدقاءك</string>
    <string name="team">فريق العمل</string>
    <string name="feedback">يهمنا سماع رأيك راسلنا على موقعنا</string>
    <string name="title_activity_about_team">AboutTeamActivity</string>
    <string name="surah_name">سورة الكهف - العصمة من الفتن </string>
    <string name="mindmap">الخريطة الذهنية</string>
    <string name="virtue">فضل السورة</string>
    <string name="virtue_tit">فضل سورة الكهف </string>
    <string name="mindmap_tit">ماهى الخرائط الذهنية</string>
    <string name="mindmap_data">لخريطه الذهنيه هى وسيلة تعبيرية عن الأفكار والمخططات بدلا من الاقتصار على الكلمات فقط حيث تستخدم الفروع والصور والألون في التعبير عن الفكرة. وتعتمد على الذاكرة البصريةفي رسم توضيحي سهل المراجعة والتذكر بقواعد وتعليمات ميسرة. و  هذه الطريقة هي الطريقة الفعلية التي يستخدمها العقل البشري في التفكير

قالو عن الخريطة الذهنية
يقول د.نجيب الرفاعي
" إن التعود على هذا النمط الجديد في المذاكرة و الدراسة سوف يحسن بلا شك
من أداء الطالب في الإمتحانات و يضمن له الدرجات بصورة سهلة و ميسرة "
و يقول د.طارق السويدان
الخريطة الذهنية بسيطة جدا جدا , و أنا شخصيا دائما أستخدمها من كتابة
الكتب إلى إعداد ألبوماتي , لا يوجد ألبومي عندي إلا و له خريطة ذهنية , حتى
يمكنك أن تصمم بها مدخل بوابة شركتك على سبيل المثال "
و يقول صلاح الراشد :
الآن أصبح من البدائية أنك تكتب أو تلخص موضوع بواسطة المفكرة و القلم ,
الآن هو وقت الخريطة الذهنية
1- تعطيك صورة شاملة عن الموضوع الذي تريد دراسته أو التحدث عنها بحيث
أنك سترى الموضوع بصورة أكثر شمولية يعني كل شئ في ورقة واحدة .
2- تعطيك صورة واضحة عن موقعك الآن .. أين وصلت .. ماذا تريد (هدفك) ؟ .
. من أين ستبدأ .. ماهي العوائق ؟؟
3- تجعلك تضع أكبر قدر ممكن من المعلومات في ورقة واحدة بشكل مركز
ومختصر يغنيك عن رزم من الورق .

يمكن لخرائط العقل ان تساعدك على :
- توفير الوقت
- زيادة سرعة وكفاءة الدراسة
- جعل الدراسة أكثر سهولة ويسرا
- رؤية الصورة من جميع جوانبها
- التركيز
- تنظيم أفكارك وتنقيتها
- تذكر الأشياء بصورة أفضل
- التخطيط</string>
    <string name="virtue_data">فضل سورة الكهف
عن أبي سعيد الخدري قال : " من قرأ سورة الكهف ليلة الجمعة أضاء له من النور فيما بينه وبين البيت العتيق " .

" من قرأ سورة الكهف في يوم الجمعة أضاء له من النور ما بين الجمعتين " .

وعن ابن عمر رضي الله عنهما قال : قال رسول الله صلى الله عليه وسلم : " من قرأ سورة الكهف في يوم الجمعة سطع له نور من تحت قدمه إلى عنان السماء يضيء له يوم القيامة ، وغفر له ما بين   الجمعتين ".

وقال رسول الله صلى الله عليه وسلم : ( من حفظ عشر آيات من أول سورة الكهف عُصم من " فتنة " الدَّجال )

قرأ رجل سورة الكهف وفي الدار دابة فجعلت تنفر، فنظر فإذا ضبابة أو سحابة قد غشيته، فذكر ذلك للنبي صلى الله عليه وسلم فقال : اقرأ فلان، فإن السكينة نزلت للقرآن. وهذا الذي كان يقرأ هو أسيد بن حضير كما بينه الطبراني

قال رسول الله صلى الله عليه وسلم: ألآ أخبركم بسورة ملأ عظمتها ما بين السماء والأرض ولكاتبها من الأجر مثل ذلك، ومن قرأها يوم الجمعة غفر له ما بينه وبين الجمعة الأخرى وزيادة ثلاثة أيام، ومن قرأ الخمس الأواخر منها عند نومه بعثه الله من أي الليل شاء. قالوا: بلى يا رسول الله قال: سورة أصحاب الكهف. [والحديث ضعيف].
ومعنى بعثه الله أي الليل شاء: أن من قرأ الخمس الآيات الاواخر من سورة الكهف يبقين وإيمان وتصديق بها وعمل بما تضمنته هذه الآيات ونوى عند قراءتها أن يستيقظ في وقت معين أيقظه الله ذلك الوقت.

قال رسول الله صلى الله عليه وسلم " البيت الذي تقرأ فيه سورة الكهف لا يدخله شيطان تلك الليلة

وتقرأ السورة في ليلة الجمعة أو في يومها ، وتبدأ ليلة الجمعة من غروب شمس يوم الخميس ، وينتهي يوم الجمعة بغروب الشمس ، وعليه : فيكون وقت قراءتها من غروب شمس يوم الخميس إلى غروب شمس يوم الجمعة </string>

    <string-array name="from">
        <item>1</item>
        <item>9</item>
        <item>27</item>
        <item>32</item>
        <item>47</item>
        <item>60</item>
        <item>83</item>
        <item>99</item>
    </string-array>
    <string-array name="to">
        <item>8</item>
        <item>26</item>
        <item>31</item>
        <item>46</item>
        <item>59</item>
        <item>82</item>
        <item>98</item>
        <item>110</item>
    </string-array>
    <string-array name="part_name">
        <item>مقدمة</item>
        <item>قصة اصحاب الكهف (فتنة  الدين)</item>
        <item>نصائح. نعيم المؤمنين</item>
        <item>قصة اصحاب الجنتين (فتنة  المال)</item>
        <item>محرك الفتن ابليس</item>
        <item>قصة موسي و الخضر (فتنة  العلم)</item>
        <item>قصة ذي القرنين(فتنة  السلطة)</item>
        <item>الختام</item>
    </string-array>

    <string name="title_activity_how_to_use">HowToUseActivity</string>
    <string name="how_to_use_tt">أحسن طريقة للاستفادة من التطبيق</string>
    <string name="how_to_use">"
أفضل وقت للحفظ هو الصباح
1.فى الصفحة الرئيسية للسورة تأكد انك تفهم تسلسل المحاور الرئيسية للسورة
2.ضع وقت معين تقوم فيه بالانتهاء من الحفظ
3.افتح الفرع الاول واستمع الى التلاوة 3 مرات
4.خذ نفس عميق واقرء الايات 3 مرات لو كنت فى حالة تركيز يمكنك انهاء الوجه الواحد من المصحف فى 10:15 دقيقة لو لم تتم الحفظ فى هذا الوقت يمكنك ان تجرب المشى لعشرة دقائق وانت تستمع للتلاوة
5.حاول ان تكرر الايات من ذاكرتك
6.لو لم تشعر من تمكنك من الحفظ كرر الخطوات 3:5 حتى تشعر انتك متمكن من الايات
7.انتقل للفرع الذى يليه
        "</string>
    <string name="start">أبدأ</string>

    <string-array name="name">
        <item>Elham Kayed</item>
        <item>Hala Adly</item>
        <item>Mohamed awady</item>
        <item>Mohamed Hemdan</item>
        <item>Sherif  Shabaan</item>
    </string-array>
    <string-array name="pos">
        <item>UX Designer</item>
        <item>Android Developer</item>
        <item>UX Designer</item>
        <item>Android Developer</item>
        <item>UI Designer</item>
    </string-array>
    <string-array name="fb">
        <item>https://www.facebook.com/ekayed</item>
        <item> https://www.facebook.com/hallola.mohammed</item>
        <item>https://www.facebook.com/eng.mohammed.alawady</item>
        <item>https://www.facebook.com/mohamed.hemdan.elhelow</item>
        <item> https://www.facebook.com/pages/SherifAhmed-Freelancer-graphic-designer/137056376366905</item>
    </string-array>
    <string-array name="mail">
        <item>ekayed@gmail.com</item>
        <item>halaadly@gmail.com</item>
        <item>eng.mohammed.alawady@gmail.com</item>
        <item>eng.mohamedelhelow@gmail.com</item>
        <item>sherifshaabann99@yahoo.com</item>
    </string-array>
    <string-array name="linked">
        <item>http://eg.linkedin.com/in/ekayed</item>
        <item>http://eg.linkedin.com/pub/hala-adly-mohammed/1a/551/317</item>
        <item>http://www.linkedin.com/pub/mohammed-al-awady/28/57b/396</item>
        <item>http://www.linkedin.com/in/mohamedhemdan</item>
        <item>http://www.linkedin.com/in/sherifshaaban81</item>
    </string-array>
    <string-array name="motivation_popup">
        <item>كبر السن ليس عائق للحفظ فهناك من حفظه فى الستين من العمر بل هناك من  حفظته وهى فى الثالثة والسبعين وكانت أمية</item>
        <item>توقف عن التمنى ولكن قرر الان ان تبدأ الحفظ </item>
        <item> تقسيم السورة لعدة اجزاء صغيرة مرتبطة بفكرة واحدة وهو ما يسمى بالخريطة الذهنية والتى بدورها تساعدك فى:
- توفير الوقت
- زيادة سهولة وسرعة وكفاءة الحفظ
- رؤية الصورة الكلية للسورة
- التركيز و التخطيط
- تنظيم أفكارك وتنقيتها </item>
        <item> فقط اطرد كل التردد والخوف وكلمة مستحيل وضع نية حفظ القران وسيسهل الله كما وعد بتيسيير حفظ القران (ولقد يسرنا القرام للذكر فهل من مدكر) </item>
        <item> قد يعتقد البعض ان حفظ القران شىء صعب او يحتاج للكثير من الوقت وهذا غير صحيح مجرد فهمك للفكرة الرئيسية للسورة وترتيب الافكار الفرعيه سيسهل الحفظ جدا </item>
        <item> الذاكرة البشرية تحتمل اضعاف اضعاف ما نستخدمه استغل هذه القدرة فى حفظ كتاب الله </item>
        <item> و يقول د.طارق السويدان
الخريطة الذهنية بسيطة جدا جدا , و أنا شخصيا دائما أستخدمها من كتابة
الكتب إلى إعداد ألبوماتي , لا يوجد ألبومي عندي إلا و له خريطة ذهنية , حتى
يمكنك أن تصمم بها مدخل بوابة شركتك على سبيل المثال " </item>
        <item> هناك فتاة انهت حفظ القران فى 47 يوم وهناك من انتهى من الحفظ فى 50 يوم وغيره انتهى فى 58 يوم اى اقل من شهرين </item>
        <item> يمكنك دائما انهاء الحفظ فى وقت اقصر مما رتبت له هناك فتاة انهت حفظ سورة الكهف فى يوم واحد وهناك اخرى حفظت سورة البقرة وال عمران والنساء فى اسبوع واحد </item>
        <item> كان هناك شاب يشكو من سوء ذاكرته منذ الصغر وعندما ازال هذا العائق الوهمى كان يحفظ الوجه الواحد فى اقل من 10 دقائق ولو استغرقت اكثر من 15 دقيقة فى الوجه فانت محتاج للتركيز اكثر </item>
        <item> قال رسول الله صلى الله عليه وسلم مثل المؤمن الذي يقرأ القرآن كمثل الأترجة ريحها طيب وطعمها طيب ومثل المؤمن الذي لا يقرأ القرآن كمثل التمرة لا ريح لها وطعمها حلو ومثل المنافق الذي يقرأ القرآن مثل الريحانة ريحها طيب وطعمها مر ومثل المنافق الذي لا يقرأ القرآن كمثل الحنظلة ليس لها ريح وطعمها مر </item>
        <item> احذر المعاصى فهى تسبب سوء الحفظ 
شكوت إلى وكيع سوء حفظي *** فأرشدني إلى ترك المعاصي
وأخبرني بأن العلم نور *** ونور الله لا يهدى لعاصي </item>
        <item> من الافضل اتخاذ اخ او اخت قرأنى لمتابعة الحفظ والتصحيح والمراجعة سويا وللتشجيع المتبادل </item>
        <item> ثق بالله الذى منحك هذا العقل وتأمل فضله عليك وابداعه فى قدرات عقلك </item>
        <item> قال رسول الله صلى الله عليه وسلم
من قرأ حرفا من كتاب الله فله به حسنة ، والحسنة بعشر أمثالها ، لا أقول { ألم } حرف ، ولكن ألف حرف ، ولام حرف ، وميم حرف </item>
        <item> قال رسول الله صلى الله عليه وسلم
عليك بتلاوة القرآن ؛ فإنه نور لك في الأرض ، وذخر لك في السماء </item>
        <item> عن أبي سعيد الخدري قال: " من قرأ سورة الكهف في يوم الجمعة أضاء له من النور ما بين الجمعتين " </item>
        <item> وعن ابن عمر رضي الله عنهما قال : قال رسول الله صلى الله عليه وسلم : " من قرأ سورة الكهف في يوم الجمعة سطع له نور من تحت قدمه إلى عنان السماء يضيء له يوم القيامة ، وغفر له ما بين   الجمعتين " </item>
        <item> وقال رسول الله صلى الله عليه وسلم : ( من حفظ عشر آيات من أول سورة الكهف عُصم من " فتنة " الدَّجال ) </item>
        <item> قرأ رجل سورة الكهف وفي الدار دابة فجعلت تنفر، فنظر فإذا ضبابة أو سحابة قد غشيته، فذكر ذلك للنبي صلى الله عليه وسلم فقال : اقرأ فلان، فإن السكينة نزلت للقرآن. وهذا الذي كان يقرأ هو أسيد بن حضير كما بينه الطبراني </item>
        <item> قد تحتفل بالناسبات الخاصه فى حياتك كالزواج او الاجازات والاعياد بحفظ القران </item>
        <item> الاستفادة من الوقت الضائع بالحفظ اثناء ركوب وسائل المواصلات </item>
        <item> خباز اتم حفظ القران اثناء اداءه لعمله ان كان مجال ووقت عملك يسمح لك بالحفظ فلا تتردد </item>
        <item> حول مرضك الى شىء ايجابى (فيه شفاء للناس) زميل لنا كسرت رجله فأتم حفظ القران فى اربعة شهور ونصف اثناء مكوثه فى المنزل </item>
        <item> قال رسول الله صلى الله عليه وسلم " البيت الذي تقرأ فيه سورة الكهف لا يدخله شيطان تلك الليلة </item>
        <item> عن النبي صلى الله عليه وسلم قال :" يقال لصاحب القرآن اقرأ وارتق ورتل كما كنت ترتل في الدنيا فإن منزلتك عند آخر آية تقرأ بها "  </item>
    </string-array>

    <string name="title_activity_mind_map">MindMapActivity</string>
    <string name="to_kahf">الى سورة الكهف</string>

</resources>