<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActvityBackGround"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   
    tools:context=".SurahActivity" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title"
        android:layout_alignParentTop="true"
        android:background="@drawable/top_bar_empty" />

    <ImageButton
        android:id="@+id/aboutus_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/title" 
        android:src="@drawable/button_aboutus_selector"
        android:background="@android:color/transparent"
        android:layout_marginLeft="5dp"
        />

    <c.CTextView
        android:id="@+id/title"
        style="@style/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/aboutus_btn"
        android:text="@string/surah_name"
        android:padding="5dp" />

    <ImageView
        android:id="@+id/circle_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/whole_circle" />

    <c.CTextView
        android:id="@+id/perc_txt"
        style="@style/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/circle_img"
        android:layout_alignLeft="@+id/circle_img"
        android:layout_alignRight="@+id/circle_img"
        android:layout_alignTop="@+id/circle_img"
        android:layout_below="@+id/title"
        android:gravity="center"
        android:text="0 %" />

    <ImageButton
        android:id="@+id/mindmap_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/circle_img"
        android:layout_alignTop="@+id/circle_img"
        android:layout_toRightOf="@+id/circle_img"
        android:background="@android:color/transparent"
        android:src="@drawable/mind_map_button"
        android:text="@string/mindmap" />

    <ImageButton
        android:id="@+id/virtue_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/circle_img"
        android:layout_alignTop="@+id/circle_img"
        android:layout_toLeftOf="@+id/circle_img"
        android:background="@android:color/transparent"
        android:src="@drawable/benifit_button"
        android:text="@string/virtue" />

    <ListView
        android:background="@android:color/darker_gray"
        android:id="@+id/surah_details_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/circle_img"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >
    </ListView>

</RelativeLayout>